--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -3,4 +3,5 @@
 {% block body %}
     <h1>{{ page_title | capitalize }}</h1>
     {{ include('components/user-card.html.twig') }}
+    {{ render(controller('AppBundle:Users:Card')) }}
 {% endblock %}
