--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -7,6 +7,7 @@
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
     <body>
+    <a href="{{ path('homepage') }}">Return to the Homepage</a>
         {% block body %}{% endblock %}
         {% block javascripts %}{% endblock %}
     </body>
